--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/styles.css
@@ -54,8 +54,7 @@
     -fx-background-color: transparent;
     -fx-background-image: url("https://i.imgur.com/tu0fMom.png");
     -fx-background-repeat: no-repeat;
-    -fx-background-size: cover;
-    -fx-background-size: 23 24;
+    -fx-background-size: 23 24, cover;
     -fx-background-position: center center;
 }
 
@@ -63,8 +62,7 @@
     -fx-background-color: transparent;
     -fx-background-image: url("https://i.imgur.com/c5GHR31.png");
     -fx-background-repeat: no-repeat;
-    -fx-background-size: cover;
-    -fx-background-size: 23 24;
+    -fx-background-size: 23 24, cover;
     -fx-background-position: center center;
 }
 
@@ -110,30 +108,27 @@
     -fx-background-color: transparent;
 }
 
-.callendar {
+.calendar {
     -fx-background-image: url("https://i.imgur.com/MU6w7RP.png");
     -fx-background-repeat: no-repeat;
-    -fx-background-size: contain;
     -fx-background-color: transparent;
     -fx-background-position: center;
-    -fx-background-size: 16 18;
+    -fx-background-size: 16 18, contain;
 }
 
 .table {
     -fx-background-image: url("https://i.imgur.com/Iurq5pG.png");
     -fx-background-repeat: no-repeat;
-    -fx-background-size: contain;
     -fx-background-color: transparent;
     -fx-background-position: center;
-    -fx-background-size: 16 16;
+    -fx-background-size: 16 16, contain;
 }
 
 
 .noReceipt {
     -fx-background-image: url("https://i.imgur.com/sx4Cq6t.png");
     -fx-background-repeat: no-repeat;
-    -fx-background-size: contain;
-    -fx-background-size: 88 88;
+    -fx-background-size: 88 88, contain;
 }
 
 .search-field {
